5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1734_2499.log
== SUBMITION (2019-05-09 19:39:56) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print(soma)

			
-- EXECUTION TIME:
1.4469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:40:02) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print(soma)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:40:27) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
	print(soma,8)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:40:42) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
	print(soma,8)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:40:44) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
	print(soma,8)

			
-- EXECUTION TIME:
1.20378
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
digite o numero:
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
digite o numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:40:56) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print(soma,8)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(soma,8)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:41:26) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print(round(soma,8))

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:41:54) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print round(soma,8)

			
-- ERROR:
File "XXXX", line 7
    print round(soma,8)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:41:54) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print round(soma,8)

			
-- EXECUTION TIME:
1.08998
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 7
    print round(soma,8)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:42:22) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
while(k<=e):
	soma= k + 1+(1/1*k)
	k=k+1
print (round(soma,8))

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:56:14) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	soma= e + 1/factorial(i)
	k=i+1
print(round(soma,8))

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:56:36) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	soma= e +1/factorial(i)
	k=i+1
print(round(soma,8))

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:57:13) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	k=i+1
print(round(e,8))

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:59:25) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	k=i+1
print(round(e,8))

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:02:18) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	i=i+1
print(round(e,8))

			
-- EXECUTION TIME:
1.30586
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:23:03) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	soma= e+1/factorial(i)
	k=i+1
print(round(soma,8))

			
-- EXECUTION TIME:
1655.52
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:31:02) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	k=i+1
print(round(e,8))

			
-- EXECUTION TIME:
2004.08
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:31:02) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	k=i+1
print(round(e,8))

			
-- EXECUTION TIME:
2001.42
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:31:02) 
-- CODE:
from math import*
k= int(input("digite o numero:"))
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	k=i+1
print(round(e,8))

			
-- EXECUTION TIME:
2002.1
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:32:02) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	k=i+1
print(round(e,8))

			
-- EXECUTION TIME:
1971.23
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:55:50) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	i=i+1
print(round(i,8))

			
-- EXECUTION TIME:
0.18337
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
7
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
15
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:55:56) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	i=i+1
print(round(i,8))

			
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:56:47) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	i=i+1
print(round(e,8))

			
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:57:05) 
-- CODE:
k= int(input("digite o numero:"))
from math import*
e=0
i=0
while(i<k):
	e= e +1/factorial(i)
	i=i+1
print(round(e,8))

			
-- EXECUTION TIME:
0.259858
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
